[package]
name = "task_manager_hw7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"
derivative = "2.2.0"
now = "0.1.3"
ratatui = "0.24.0"
rusqlite = { version = "0.30.0", features = ["chrono", "bundled"] }
